--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
 <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+<!-- The core Firebase JS SDK is always required and must be listed first -->
 
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBCL8FHp8w7n0UYM3uNfv8lKwlMjMRY7xc",
+    authDomain: "multiplayer-car-racing-g-447f3.firebaseapp.com",
+    projectId: "multiplayer-car-racing-g-447f3",
+    storageBucket: "multiplayer-car-racing-g-447f3.appspot.com",
+    messagingSenderId: "995217330219",
+    appId: "1:995217330219:web:d46909d6aba5a85d6cda6e"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   </head>
   <body>
       <script src="sketch.js"></script>
